--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,6 +15,10 @@
     "newRecording": "New Recording",
     "install": "Install app"
   },
+  "settings": {
+    "title": "Settings",
+    "autoCopy": "Automatically copy new text into clipboard"
+  },
   "recording": {
     "status": "Recording",
     "instruction": "Explain how you would like the text to be rephrased, for example: 'shorter and more serious' or 'translate to french'",
