sign in with google dialog coming after some free uses, but only after result text is shown

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1,9 +1,8 @@
 {
   "auth": {
     "signOut": "Abmelden",
-    "continueUsing": "Melden Sie sich an, um die App weiter zu nutzen",
-    "signIn": "Anmelden",
-    "maxUsageReached": "Sie haben die maximale Anzahl kostenloser Verwendungen erreicht. Bitte melden Sie sich an, um fortzufahren."
+    "maxUsageReached": "Melden Sie sich an, um fortzufahren",
+    "signIn": "Anmelden"
   },
   "recording": {
     "recording": "Aufnahme läuft...",
