--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,9 +1,8 @@
 {
   "auth": {
     "signOut": "Sign out",
-    "continueUsing": "Sign in to continue using the app",
-    "signIn": "Sign in",
-    "maxUsageReached": "You have reached the maximum number of free uses. Please sign in to continue."
+    "maxUsageReached": "Sign in to continue",
+    "signIn": "Sign in"
   },
   "recording": {
     "recording": "Recording in progress...",
