--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -95,5 +95,8 @@
     "termsNotice": "By signing up for Professional plan you accept the terms & conditions",
     "changePlan": "Change Plan",
     "currentPlan": "Current Plan:"
-  }
+  },
+  "placeholder": { 
+    "enterText": "Use 'New Recording' to create a new text"
+  }  
 }
